# flash-attention-cute

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: bench.py
csrc/: flash.h  flash_api.cpp  flash_fwd_kernel.cuh  flash_fwd_launch.cu  flash_fwd_traits.h  static_switch.h
flash_attention/: __init__.py  interface.py
scripts/: profile_registers.py
tests/: profile_bank_conflict.py  run_ncu.sh  test_flash_attn.py
